# tree-sitter-tenable-audit

./: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json  parser.exp  parser.lib
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: tags.scm
src/: grammar.json  node-types.json  parser.c
test/audit_files/: double_quote_strings.audit  if_condition_01.audit  if_condition_02.audit  if_condition_03.audit  if_condition_04.audit  if_condition_05.audit  registry_setting_01.audit
test/corpus/: custom_item.txt  if_conditions.txt
