[package]
name = "tree-sitter-tenable-audit"
description = "tenable-audit grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "tenable-audit"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-tenable-audit"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.0"

[build-dependencies]
cc = "1.0"
